fix: spacing between elements in current team content

--- a/docs/assets/css/home.css
+++ b/docs/assets/css/home.css
@@ -591,6 +591,7 @@ header h1.deven-headtext {
   flex-direction: column;
   align-items: center;
   gap: 60px;
+  --avatar-size: 170px;
 }
 @media (min-width: 768px) {
   .home > section.current-team {
@@ -621,8 +622,11 @@ header h1.deven-headtext {
 .home > section.current-team ul li img {
   border-radius: 50%;
   object-fit: cover;
-  width: 170px;
-  height: 170px;
+  width: var(--avatar-size);
+  height: var(--avatar-size);
+}
+.home > section.current-team ul li p {
+  max-width: var(--avatar-size);
 }
 .home > section.current-team ul li h3 {
   font-weight: bold;
